--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   app:
+    container_name: mi_app_realstate_backend
     build:
       context: .
       dockerfile: Dockerfile
