--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -99,6 +99,13 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.19.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.github.cdimascio/dotenv-java -->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
