--- a/.github/workflows/gg-guard.yml
+++ b/.github/workflows/gg-guard.yml
@@ -18,5 +18,5 @@ jobs:
         run: pip install ggshield
       - name: Scan for secrets
         env:
-          GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
+          GITGUARDIAN_API_KEY: ${{ secrets.SECRET_GIT_GUARDIAN }}
         run: ggshield secret scan repo . --exit-zero
